---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: ?
  Changes:
    - New graphics for sinter unit. Resolves https://github.com/pyanodon/pybugreports/issues/588
---------------------------------------------------------------------------------------------------
Version: 3.0.6
Date: 2024-11-15
  Changes:
    - Salt mines no longer requires gas canisters can consume fuel directly.
    - Greatly increased the fuel consumption of the salt mine from 800kW to 20MW.
    - Increased the number of module slots in the salt mine 1 -> 5.
    - Added light flicker effects to the salt mine.
    - Diluted the effects of green modules on the salt mine by a factor of 9x.
---------------------------------------------------------------------------------------------------
Version: 3.0.5
Date: 2024-11-14
  Changes:
    - Fixed vechicle impact sounds were missing due to 2.0 migration.
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: 2024-11-9
  Changes:
    - Native Flora now spoils into Native Floridaman.
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: 2024-11-7
  Changes:
    - Made most crafting machines flippable
    - Added Ukrainian translation (by bootseller)
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: 2024-10-29
  Changes:
    - Fixed nuclear research technology.
    - Improved the quality of the ores
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-10-21
  Changes:
    - updated fertilizer internal name
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-10-20
  Changes:
    - Reduced the stack size of mega drill heads from 100 to 5.